src/test/deca/context/valid/sansObjet/FloatAffectation.deca
{
    float x = 2020.2;
    x = 0.1;
    print(x);
}