src/test/deca/context/invalid/sansObjet/BadTypeDeclaration.deca
{
    bolean x = 1.2;
}